Refactoring game into multiple classes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <canvas id="sudoku" width="1000" height="1000"></canvas>
 
-<script src="sudoku.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
