Splitting code into multiple files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <canvas id="sudoku" width="1000" height="1000"></canvas>
 
+<script src="board.js"></script>
+<script src="sudoku.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
