--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Sudoku Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<canvas id="sudoku" width="1000" height="1000"></canvas>
+<div class="sudokuContainer">
+    <canvas id="sudoku" width="1000" height="1000"></canvas>
+    <div class="cursor"></div>
+</div>
 
+<script src="cursor.js"></script>
 <script src="board.js"></script>
 <script src="sudoku.js"></script>
 <script src="main.js"></script>
