Switched entire game from HTML5 canvas to normal HTML elements

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
 
 <div class="sudokuContainer">
-    <canvas id="sudoku" width="1000" height="1000"></canvas>
+    <div class="sudokuCells"></div>
     <div class="cursor"></div>
 </div>
 
+<script src="cell.js"></script>
 <script src="cursor.js"></script>
 <script src="board.js"></script>
 <script src="sudoku.js"></script>
