--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <script src="cell.js"></script>
 <script src="cursor.js"></script>
 <script src="board.js"></script>
+<script src="input.js"></script>
+<script src="inputButtons.js"></script>
 <script src="sudoku.js"></script>
 <script src="main.js"></script>
 </body>
